@@ -58,7 +58,7 @@ from .latvia import Latvia, LV, LVA
 from .lesotho import Lesotho, LS, LSO
 from .lithuania import Lithuania, LT, LTU
 from .luxembourg import Luxembourg, LU, LUX
-from .madagascar import Madagascar, MG,MDG
+from .madagascar import Madagascar, MG, MDG
 from .malawi import Malawi, MW, MWI
 from .malaysia import Malaysia, MY, MYS
 from .malta import Malta, MT, MLT
