@@ -7,6 +7,7 @@ Released ????? ??, ????
 - Added financial markets support: ECB and NYSE, list_supported_financial() method (dr-p)
 - Support for NY Stock Exchange #651, #458 (nadime, dr-p)
 - Support for Malta #612, #630 (rafelbev)
+- Support for Madagascar #656 (fav007)
 - Ireland as standalone country #636, #639 (TeoTN, dr-p, javicalle)
 - Australia fixes #631 (jeremychrimes)
 - Singapore updates #652 (mborsetti)
